fix android instructions fimg file extention

--- a/index.html
+++ b/index.html
@@ -209,15 +209,15 @@
 
         <h4>Step 2.</h4>
         <p>Tap the three dots in the top right corner of the browser window.</p>
-        <img src="./assets/app-photos/step1(android).PNG" alt="Step 1" class="img-fluid mb-3">
+        <img src="./assets/app-photos/step1(android).png" alt="Step 1" class="img-fluid mb-3">
 
         <h4>Step 3.</h4>
         <p>Select "Add to Home Screen" from the menu that appears.</p>
-        <img src="./assets/app-photos/step2(android).PNG" alt="Step 2" class="img-fluid mb-3">
+        <img src="./assets/app-photos/step2(android).png" alt="Step 2" class="img-fluid mb-3">
 
         <h4>Step 4.</h4>
         <p>Tap "Add" to confirm and add the web app to your home screen.</p>
-        <img src="./assets/app-photos/step3(android).PNG" alt="Step 3" class="img-fluid mb-3">
+        <img src="./assets/app-photos/step3(android).png" alt="Step 3" class="img-fluid mb-3">
 
         <h4>Important Note:</h4>
         <p>You should find the web app icon in your list of installed apps.  You may have to manually move it to the home screen if it doesn't appear there automatically.</p>
